Collapsible horizontal filters pane f341_market

--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -39,6 +39,19 @@
         </label>
       </div>
     </div>
+
+    <div data-accordions-toggle class='accordion-panel-toggle'>
+      <svg version="1.1" id="sliders" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      	 viewBox="0 0 18 14" style="enable-background:new 0 0 18 14;" xml:space="preserve">
+        <style type="text/css">
+        	.st0{fill:#374A50;}
+        </style>
+        <path id="sliders-bars" class="st0" d="M18,7.5H0v-1h18V7.5z M18,11.5H0v1h18V11.5z M18,1.5H0v1h18V1.5z"/>
+        <rect id="slider-bottom" x="3" y="10" class="st0" width="4" height="4"/>
+        <rect id="slider-middle" x="11" y="5" class="st0" width="4" height="4"/>
+        <rect id="slider-top" x="3" class="st0" width="4" height="4"/>
+      </svg>
+    </div>
   </div>
 
   <div class="container-fluid container-fluid-padding accordion-container">
