edit footer and pricing page

--- a/public/the_bridge_templates/footer.html
+++ b/public/the_bridge_templates/footer.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12">
       <p class="text-center">
-        open[Fn] is connecting technologies for a more efficient development sector. We are a non-profit and all of our code is open source.
+        open[Fn] is connecting technologies for a more efficient development sector. All of our code is open source.
         <br><br>
         <a href="https://github.com/OpenFn/OpenFn-Site" target="_blank">
           Join our developers on github <i class="fa fa-github fa-lg"></i>
