--- a/public/the_bridge_templates/static/pricing.html
+++ b/public/the_bridge_templates/static/pricing.html
@@ -156,7 +156,7 @@
         <h4>Please <u><a href="mailto:admin@openfn.org">contact</a></u> us if none of the above plans fit your needs.</h4>
       </div>
       <div class="col-lg-10 col-lg-offset-1">
-        <h4>open[fn] is a non-profit organization and we hope to soon have 501(c)3 approval. Grants and donations subsidize the costs of the platform heavily, but those costs are significant and the time and money saved by organizations using the platform is great.</h4>
+        <h4>Grants and donations subsidize the costs of the platform heavily, but those costs are significant and the time and money saved by organizations using the platform is great.</h4>
 
         <h4>By open-sourcing our code, we're ensuring that everything remains priced at or below the 'do-it-yourself' cost. If you can host the application less expensively with your own servers and staff, you're free to use everything we've built. The code is <u><a href="https://www.gnu.org/licenses/quick-guide-gplv3.html" target="_blank">GPLv3</a></u> licensed, which stipulates that any such derivatives or improvements to the platform <em>must</em> remain open-source. We will periodically roll-those enhancements back into openfn.org so that the whole community can benefit from innovations made by any of our individual members.</h4>
         </br>
