Three col layout for xl displays f341_market

--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -85,7 +85,7 @@
     </div>
   </div>
 
-  <div class="container-fluid container-fluid-padding margin-large-bottom">
+  <div class="container-fluid container-fluid-padding container-max-width margin-large-bottom">
     <div class="col-sm-12">
       <div class="product-list row margin-small-top" ontouchstart="this.classList.toggle('hover');">
 
