--- a/public/the_bridge_templates/marketplace/products.html
+++ b/public/the_bridge_templates/marketplace/products.html
@@ -1,5 +1,5 @@
 <div ng-repeat="product in (filteredProducts =( products | filter:filterProducts)) | orderBy:['-integrated','-votes_count','name']">
-  <div class="product-container col-lg-6 col-md-6 col-sm-6 col-xs-12">
+  <div class="product-container col-xl-4 col-lg-6 col-md-6 col-sm-6 col-xs-12">
     <div ng-class="product.integrated ? 'product integrated' : 'product'" ng-click="go('/product/' + product.id)">
 
       <div class='rating'>
