start with filters expanded

--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -54,7 +54,7 @@
     </div>
   </div>
 
-  <div class="container-fluid container-fluid-padding accordion-container">
+  <div class="container-fluid container-fluid-padding accordion-container" style="display: block">
     <div class="col-xs-12 margin-large-top margin-bottom">
       <div class="col-lg-2 col-sm-6 custom-accord" ng-repeat="category in categories">
         <accordion>
