welcome page changes, smaller tiles in market, new logo

--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -3,8 +3,9 @@
     <div id="particles-js"></div>
     <div class="banner-headline">
       <div class="col-xs-12">
-        Technology isn't the answer,<br>
-        but it shouldn't be the problem.
+        
+      </div>
+      <div class="logo">
       </div>
     </div>
     <div class="numbers">
@@ -31,10 +32,10 @@
         <div class="row">
           <div class="col-md-8">
             <h2 class="featurette-heading">
-              Leading NGOs find & connect technologies to amplify their impact with <b>open[Fn]</b>.
+              Leading NGOs find & connect technologies to amplify their impact with <b>Open[Fn]</b>.
             </h2>
             <p class="lead">
-              From household survey data in northern India, to attendance recorded at women's groups in Kenya, we are moving the data that makes impact-first organizations more efficient and effective. <b>Scroll to learn more. <i class="fa fa-level-down"></i></b>
+              Technology isn't the answer, but it shouldn't be the problem. From household survey data in northern India, to attendance recorded at women's groups in Kenya, we are moving the data that makes impact-first organizations more efficient and effective.
             </p>
           </div>
         </div>
