--- a/public/the_bridge_templates/mappings/new.html
+++ b/public/the_bridge_templates/mappings/new.html
@@ -1,7 +1,7 @@
 <div class="ideas">
   <div class="container">
 
-    <h3>Create a new map</h3> 
+    <h2>Create a new map</h2> 
 
     <div id="errorExplanation" class='text-danger' ng-show="errors">
       <ul>
@@ -9,7 +9,9 @@
       </ul>
     </div>
 
-    <h4>Choose your ODK Form</h4>
+    <br>
+
+    <h4>1. Choose your source form.</h4>
 
     <div class='row'>
       <div class='col-md-4'>
@@ -17,24 +19,29 @@
           <select ng-model="mapping.odkForm.name" ng-options="o as o for o in odkForms" class='form-control'></select>
         </div>
       </div>
+    </div>
+
+    <h4>2. Give your mapping a name. (Something to distinguish this mapping from others.)</h4>
+    <div class='row'>
       <div class='col-md-4'>
-        <a href='#' ng-click="createMapping()" class='btn btn-success' ng-disabled="isCreating">Create Mapping</a>
+        <div class="form-group">
+          <input type="text" ng-model="mapping.name" class='form-control' />
+        </div>
       </div>
-
     </div>
 
-    <div class="form-group">
-      <label for="mapping_name">Description</label>
-      <input type="text" ng-model="mapping.name" class='form-control' />
-    </div>
-
-    <div class="checkbox mapping-status-options" >
+<!--     <div class="checkbox mapping-status-options" >
       <label>
         <input type="checkbox" ng-model='mapping.enabled' ng-checked='mapping.enabled'> Enabled
       </label>
       <label>
         <input type="checkbox" ng-model='mapping.active' ng-checked='mapping.active'> Collect automatically (every 10 min)
       </label>
-    </div>
-  </div>
+    </div> -->
 
+    <br>
+    <br>
+
+      <a href='#' ng-click="createMapping()" class='btn btn-success' ng-disabled="isCreating">Create Mapping</a>
+
+  </div>
