final brushing up on legacy mappings

--- a/public/the_bridge_templates/mappings/odk_column.html
+++ b/public/the_bridge_templates/mappings/odk_column.html
@@ -3,7 +3,7 @@
     <tr>
       <th width="5%"><h4>uuid?</h4></th>
       <th width="45%"><h4>Source fields </h4></th>
-      <th width="50%" class="dest"><h4>4. Drag destination fields here to make your mapping.</h4></th>
+      <th width="50%" class="dest"><h4>4. <strong>Drag destination fields here</strong> to make your mapping.</h4></th>
     </tr>
   </thead>
   <tbody>
