--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -25,13 +25,17 @@
   <div class="featurette" id="marketplace">
     <div class="container">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-6">
             <h2 class="featurette-heading">
               Leading NGOs find & connect technologies to amplify their impact with <b>Open[Fn]</b>.
             </h2>
             <p class="lead">
               Technology isn't the answer, but it shouldn't be the problem. From household survey data in northern India, to attendance recorded at women's groups in Kenya, we are moving the data that makes impact-first organizations more efficient and effective.
             </p>
+          </div>
+          <div class="col-md-6">
+            <a class="twitter-timeline" href="https://twitter.com/openfn" data-widget-id="581403911644385280">Tweets by @openfn</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
           </div>
         </div>
     </div>    
