gendered bot remove

--- a/public/the_bridge_templates/static/v2.html
+++ b/public/the_bridge_templates/static/v2.html
@@ -2,7 +2,7 @@
     <div class="container">
 
       <div class="header">
-        <h3 class="text-muted">v2... your "bot" is waiting for his new job description!</h3>
+        <h3 class="text-muted">v2... your "bot" is waiting for its new job description!</h3>
       </div>
 
       <div class="jumbotron">
